<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FB_GasMeter_Aerius_G4" Id="{b014a8bd-18cc-4742-b2b0-71f117cee5c8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_GasMeter_Aerius_G4
VAR_INPUT
	aGasmeterTelegramm	: ARRAY[1..cMBUS_MaxTelegrams] OF ST_MBus_Data2;
END_VAR
VAR_OUTPUT
	fVolumeFlowRate : REAL; //m3/h
	fTemperature : REAL; //°C
END_VAR
VAR
	{attribute 'OPC.UA.DA' := '1'}
	sensorState : ST_GasMeterState;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[sensorState.fTemperature := STRING_TO_REAL(aGasmeterTelegramm[1].arrData[3].sValue);
sensorState.fVolumeFlowRate := STRING_TO_REAL(aGasmeterTelegramm[1].arrData[2].sValue);
sensorState.fVolume := STRING_TO_REAL(aGasmeterTelegramm[1].arrData[1].sValue);
sensorState.fPower := sensorState.fVolumeFlowRate*11.2; //11.2 kWh/m3 energy

//set outputs
fVolumeFlowRate := sensorState.fVolume;
fTemperature := sensorState.fTemperature;]]></ST>
    </Implementation>
    <LineIds Name="FB_GasMeter_Aerius_G4">
      <LineId Id="9" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="34" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="20" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>